# trustyai-detoxify

./: README.md  pyproject.toml
notebooks/: Detoxify LLM Conversations.ipynb  HAP scoring and rephrasing.ipynb  T-MaRCo models training.ipynb  Toxic text scoring and rephrasing.ipynb
scripts/: csv_data_rephrase.py  eval_toxicity.py  train_models.py
src/thap/: __init__.py  tmarco.py
src/trustyai/detoxify/: __init__.py  tmarco.py
src/trustyai/hap/: __init__.py  tmarco.py
