[project]
name = "trustyai-detoxify"
version = "0.0.1"
description = "TrustyAI tools for content detoxification."
authors = [{ name = "Tommaso Teofili", email = "tteofili@redhat.com" }]
license = { text = "Apache License Version 2.0" }
readme = "README.md"
requires-python = ">=3.8"

keywords = ["trustyai", "xai", "explainability", "ml", "hap", "toxicity"]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Java",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Java Libraries"
]

dependencies = [
    "transformers==4.30.0",
    "datasets",
    "scipy",
    "torch",
    "numpy~=1.24.1",
    "iter-tools"
]

[project.optional-dependencies]
dev = [

]
extras = [

]

[project.urls]
homepage = "https://github.com/trustyai-explainability/trustyai-detoxify"
repository = "https://github.com/trustyai-explainability/trustyai-detoxify"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
log_cli = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
